Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32577

[System Test]: Rebalance failed with buckets_shutdown_wait_failed

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      build: 6.5.0 build 1969

      Test: centos longevity

      Day : 3rd 

      cycle : 3rd

      Seeing rebalance failure during system test with the following error

      [user:error,2019-01-10T05:33:47.999-08:00,ns_1@172.23.104.113:<0.2398.345>:ns_orchestrator:do_log_rebalance_completion:1175]Rebalance exited with reason {buckets_shutdown_wait_failed,
                                       [{'ns_1@172.23.96.207',node_was_down}]}

      Seeing memcached crashe as well with 134 

      Service 'memcached' exited with status 134. Restarting. Messages:
      2019-01-10T07:13:02.169957-08:00 WARNING 199: Slow operation. {"cid":"172.23.104.113:52676/1","duration":"1276 ms","trace":"request=12156622649121356:1276626","command":"GET","peer":"172.23.104.113:52676","bucket":"ORDER_LINE"}
      2019-01-10T07:13:02.170508-08:00 WARNING 158: Slow operation. {"cid":"172.23.104.113:52672/1","duration":"1395 ms","trace":"request=12156622531264344:1395026","command":"GET","peer":"172.23.104.113:52672","bucket":"ORDER_LINE"}
      2019-01-10T07:13:02.172577-08:00 WARNING 211: Slow operation. {"cid":"92170ded3c494e47/fe21ea933f044f81/6","duration":"2300 ms","trace":"request=12156621627656803:2300414 get=12156621627699693:159 bg.wait=12156621627810085:1993830 bg.load=12156623621640306:1941 get=12156623927729022:43 store=12156623927998921:49","command":"SUBDOC_MULTI_MUTATION","peer":"172.23.96.210:37738","bucket":"NEW_ORDER"}
      2019-01-10T07:13:02.173824-08:00 WARNING 226: conn_read_packet_header - tryReadNetwork returned SocketError - closing connection [ 172.23.104.78:33554 - 172.23.96.215:11210 (<ud>@cbq-engine</ud>) ] hidens_log 000ns_1@172.23.96.215 7:13:02 AM   Thu Jan 10, 2019 

      Service 'memcached' exited with status 134. Restarting. Messages:
      2019-01-10T07:13:09.464447-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0x17b5c2]
      2019-01-10T07:13:09.464457-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0x17beb5]
      2019-01-10T07:13:09.464472-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0xa50d9]
      2019-01-10T07:13:09.464484-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0xa5e68]
      2019-01-10T07:13:09.464498-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0xe8a65]
      2019-01-10T07:13:09.464511-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0xe8f8d]
      2019-01-10T07:13:09.464522-08:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f89df17a000+0xe3300]
      2019-01-10T07:13:09.464536-08:00 CRITICAL /opt/couchbase/bin/../lib/libplatform_so.so.0.1.0() [0x7f89ea791000+0x91d7]
      2019-01-10T07:13:09.464560-08:00 CRITICAL /lib64/libpthread.so.0() [0x7f89e8904000+0x7e25]
      2019-01-10T07:13:09.464639-08:00 CRITICAL /lib64/libc.so.6(clone+0x6d) [0x7f89e8541000+0xf834d] hidens_log 000ns_1@172.23.96.215 7:13:09 AM   Thu Jan 10, 2019 

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vikas.chaudhary Vikas Chaudhary
              vikas.chaudhary Vikas Chaudhary
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty