engines/ep/src/ep_engine.cc
@@ -2521,7 +2521,12 @@ bool EventuallyPersistentEngine::hasMemoryForItemAllocation(
 
 bool EventuallyPersistentEngine::enableTraffic(bool enable) {
     bool inverse = !enable;
-    return trafficEnabled.compare_exchange_strong(inverse, enable);
+    bool bTrafficEnabled =
+            trafficEnabled.compare_exchange_strong(inverse, enable);
+    if (bTrafficEnabled) {
+        EP_LOG_INFO("EventuallyPersistentEngine::enableTraffic() result true");
+    }
+    return bTrafficEnabled;
 }
 
 ENGINE_ERROR_CODE EventuallyPersistentEngine::doEngineStats(
@@ -5175,6 +5180,9 @@ EventuallyPersistentEngine::handleTrafficControlCmd(
             return ENGINE_ENOMEM;
         } else {
             if (enableTraffic(true)) {
+                EP_LOG_INFO(
+                        "EventuallyPersistentEngine::handleTrafficControlCmd() "
+                        "Data traffic to persistence engine is enabled");
                 setErrorContext(
                         cookie,
                         "Data traffic to persistence engine is enabled");
@@ -5634,7 +5642,15 @@ ENGINE_ERROR_CODE EventuallyPersistentEngine::dcpOpen(
                  cb::mcbp::request::DcpOpenPayload::Notifier)) {
         handler = dcpConnMap_->newProducer(cookie, connName, flags);
     } else {
-        handler = dcpConnMap_->newConsumer(cookie, connName);
+        if (!isDegradedMode()) { // dont accept dcp consumer open requests
+                                 // during warm up
+            handler = dcpConnMap_->newConsumer(cookie, connName);
+        } else {
+            EP_LOG_WARN(
+                    "EPEngine::dcpOpen: not opening new DCP Consumer handler "
+                    "as EPEngine is still warming up");
+            return ENGINE_TMPFAIL;
+        }
     }
 
     if (handler == nullptr) {
